syntax = "proto3";

package blockchain;

service BlockchainService {
  rpc RecordLandTitle(LandTitleRequest) returns (BlockchainResponse);
  rpc GetLandTitle(GetLandTitleRequest) returns (LandTitleResponse);
  rpc RecordCancellation(CancellationRequest) returns (BlockchainResponse);
}

message LandTitleRequest {
  string title_number = 1;
  string owner_name = 2;
  string property_location = 3;
  string status = 4;
  string reference_id = 5;
  int64 timestamp = 6;
  string transaction_id = 7;
}

message GetLandTitleRequest {
  string landTitleId = 1;
}

message LandTitleResponse {
  string landTitleId = 1;
  string ownerName = 2;
  string propertyAddress = 3;
  string status = 4;
  string blockchainHash = 5;
  string timestamp = 6;
}

message CancellationRequest {
  string landTitleId = 1;
  string paymentId = 2;
  string previousStatus = 3;
  string newStatus = 4;
  string reason = 5;
  string timestamp = 6;
}

message BlockchainResponse {
  bool success = 1;
  string message = 2;
  string transactionId = 3;
  string blockchainHash = 4;
}