const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const path = require('path');

// Load protocol buffer definition
const PROTO_PATH = path.join(__dirname, '../proto/blockchain.proto');
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
  json: true
});

const blockchainProto = grpc.loadPackageDefinition(packageDefinition).blockchain;

// Create gRPC client
const client = new blockchainProto.BlockchainService(
  process.env.BLOCKCHAIN_SERVICE_URL || 'backend-blockchain-service:50051',
  grpc.credentials.createInsecure()
);

class BlockchainClient {
  async recordLandTitle(landTitleData) {
    console.log(`ðŸ”— Attempting blockchain connection to: ${process.env.BLOCKCHAIN_SERVICE_URL || 'backend-blockchain-service:50051'}`);
    console.log(`ðŸ”— Payload:`, JSON.stringify(landTitleData, null, 2));
    
    return new Promise((resolve, reject) => {
      const deadline = new Date();
      deadline.setSeconds(deadline.getSeconds() + 10); // 10 second timeout
      
      client.RecordLandTitle(landTitleData, { deadline }, (error, response) => {
        if (error) {
          console.error('âŒ Blockchain gRPC error:', error);
          console.error('âŒ Error code:', error.code);
          console.error('âŒ Error details:', error.details);
          console.error('âŒ Error metadata:', error.metadata);
          reject(error);
        } else {
          console.log('âœ… Blockchain response:', response);
          resolve(response);
        }
      });
    });
  }

  async recordCancellation(cancellationData) {
    return new Promise((resolve, reject) => {
      client.RecordCancellation(cancellationData, (error, response) => {
        if (error) {
          console.error('Cancellation gRPC error:', error);
          reject(error);
        } else {
          console.log('Cancellation response:', response);
          resolve(response);
        }
      });
    });
  }

  async recordReactivation(reactivationData) {
    return new Promise((resolve, reject) => {
      client.RecordReactivation(reactivationData, (error, response) => {
        if (error) {
          console.error('Reactivation gRPC error:', error);
          reject(error);
        } else {
          console.log('Reactivation response:', response);
          resolve(response);
        }
      });
    });
  }

  async recordTransfer(transferData) {
    console.log(`ðŸ”„ Recording transfer to blockchain:`, JSON.stringify(transferData, null, 2));
    
    return new Promise((resolve, reject) => {
      const deadline = new Date();
      deadline.setSeconds(deadline.getSeconds() + 10);
      
      client.RecordTransfer(transferData, { deadline }, (error, response) => {
        if (error) {
          console.error('âŒ Transfer blockchain gRPC error:', error);
          reject(error);
        } else {
          console.log('âœ… Transfer blockchain response:', response);
          resolve(response);
        }
      });
    });
  }

  async getLandTitle(landTitleId) {
    return new Promise((resolve, reject) => {
      client.GetLandTitle({ landTitleId }, (error, response) => {
        if (error) {
          reject(error);
        } else {
          resolve(response);
        }
      });
    });
  }
}

module.exports = new BlockchainClient();